<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edtEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/event_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add event for patient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/edtStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/start_time"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="@+id/edtEventName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtEventName"
        app:layout_constraintTop_toBottomOf="@+id/edtEventName" />

    <EditText
        android:id="@+id/edtSelectDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/select_days"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edtStartTime"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edtStartTime"
        app:layout_constraintTop_toBottomOf="@+id/edtStartTime" />

    <EditText
        android:id="@+id/edtSetFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/set_frequency"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edtSelectDays"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtSelectDays"
        app:layout_constraintTop_toBottomOf="@+id/edtSelectDays" />

    <EditText
        android:id="@+id/edtEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/end_time"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edtSetFrequency"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtSetFrequency"
        app:layout_constraintTop_toBottomOf="@+id/edtSetFrequency" />

    <Button
        android:id="@+id/btn_add_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/add_event"
        app:layout_constraintEnd_toEndOf="@+id/edtEndTime"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/edtEndTime"
        app:layout_constraintTop_toBottomOf="@+id/edtEndTime" />

</androidx.constraintlayout.widget.ConstraintLayout>